force-app/main/default/objects/Seguimiento_Educativo__c/Seguimiento_Educativo__c.object-meta.xml
<CustomObject>
    <label>Seguimiento Educativo</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Nombre de Seguimiento Educativo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Seguimiento Educativo</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>