force-app/main/default/objects/Seguimiento_Educativo__c/fields/a_Espacio_de_Estudio__c.field-meta.xml
<CustomField>
    <fullName>a_Espacio_de_Estudio__c</fullName>
    <label>Acompañamiento Educativo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Excelente</fullName>
            </value>
            <value>
                <fullName>Muy Bueno</fullName>
            </value>
            <value>
                <fullName>Bueno</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>No alcanza las expectativas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>