force-app/main/default/objects/Seguimiento_Educativo__c/fields/a_Observaciones_Espacio_de_Estudio__c.field-meta.xml
<CustomField>
    <fullName>a_Observaciones_Espacio_de_Estudio__c</fullName>
    <label>a. Observaciones Acompañamiento Edu.</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>