force-app/main/default/objects/Seguimiento_Educativo__c/fields/a_Observaciones_Personales__c.field-meta.xml
<CustomField>
    <fullName>a_Observaciones_Personales__c</fullName>
    <label>a. Observaciones Personales</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>