force-app/main/default/objects/Seguimiento_Educativo__c/fields/Alumno__c.field-meta.xml
<CustomField>
    <fullName>Alumno__c</fullName>
    <label>Alumno</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>NPSP Becarios</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Seguimientos Educativos</relationshipLabel>
    <relationshipName>Seguimientos_Educativos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>