force-app/main/default/objects/Seguimiento_Educativo__c/fields/b_Observaciones_Capacitaci_n__c.field-meta.xml
<CustomField>
    <fullName>b_Observaciones_Capacitaci_n__c</fullName>
    <label>b. Observaciones Capacitación</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>