force-app/main/default/objects/Seguimiento_Educativo__c/fields/b_Observaciones_Esfuerzo__c.field-meta.xml
<CustomField>
    <fullName>b_Observaciones_Esfuerzo__c</fullName>
    <label>b. Observaciones Esfuerzo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>