force-app/main/default/objects/Seguimiento_Educativo__c/fields/c_Observaciones_Conducta__c.field-meta.xml
<CustomField>
    <fullName>c_Observaciones_Conducta__c</fullName>
    <label>c. Observaciones Conducta</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>