force-app/main/default/objects/Seguimiento_Educativo__c/fields/c_Observaciones_Practica_Educativa__c.field-meta.xml
<CustomField>
    <fullName>c_Observaciones_Practica_Educativa__c</fullName>
    <label>Observaciones Practica Educativa</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>