force-app/main/default/objects/Seguimiento_Educativo__c/fields/Cantidad_de_Materias_Desaprobadas__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_Materias_Desaprobadas__c</fullName>
    <formula>IF( X1_Calificaci_n__c &lt;7,1,0) +  IF( X2_Calificaci_n__c &lt;7,1,0) +  IF( X3_Calificaci_n__c &lt;7,1,0) +  IF( X4_Calificaci_n__c &lt;7,1,0) + IF( X5_Calificaci_n__c &lt;7,1,0) +  IF( X6_Calificaci_n__c &lt;7,1,0) +  IF( X7_Calificaci_n__c &lt;7,1,0) +  IF( X8_Calificaci_n__c &lt;7,1,0) + IF( X9_Calificaci_n__c &lt;7,1,0) +  IF( X10_Calificaci_n__c &lt;7,1,0) +  IF( X11_Calificaci_n__c &lt;7,1,0) +  IF( X12_Calificaci_n__c &lt;7,1,0) + IF( X13_Calificaci_n__c &lt;7,1,0) +  IF( X14_Calificaci_n__c &lt;7,1,0)</formula>
    <label>Cantidad de Materias Desaprobadas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>