force-app/main/default/objects/Seguimiento_Educativo__c/fields/Cantidad_de_Materias_Previas__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_Materias_Previas__c</fullName>
    <inlineHelpText>Si no debe ninguna materia, completar con 0</inlineHelpText>
    <label>Cantidad de Materias Previas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>