force-app/main/default/objects/Seguimiento_Educativo__c/fields/Cu_ntas__c.field-meta.xml
<CustomField>
    <fullName>Cu_ntas__c</fullName>
    <inlineHelpText>Si no debe ninguna materia, poner 0</inlineHelpText>
    <label>¿Cuántas?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>