force-app/main/default/objects/Seguimiento_Educativo__c/fields/d_Asistencia_a_Clase__c.field-meta.xml
<CustomField>
    <fullName>d_Asistencia_a_Clase__c</fullName>
    <label>d. Asistencia a Clase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Excelente</fullName>
            </value>
            <value>
                <fullName>Muy Bueno</fullName>
            </value>
            <value>
                <fullName>Bueno</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Insuficiente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>