force-app/main/default/objects/Seguimiento_Educativo__c/fields/d_Espacio_Desarrollo_Personal__c.field-meta.xml
<CustomField>
    <fullName>d_Espacio_Desarrollo_Personal__c</fullName>
    <inlineHelpText>Para N1 en el 3er informe va proyecto CAS.</inlineHelpText>
    <label>Espacio Desarrollo Personal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Excelente</fullName>
            </value>
            <value>
                <fullName>Muy bueno</fullName>
            </value>
            <value>
                <fullName>Bueno</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>No alcanza las expectativas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>