force-app/main/default/objects/Seguimiento_Educativo__c/fields/d_Observaciones_Asistencia_a_Clase__c.field-meta.xml
<CustomField>
    <fullName>d_Observaciones_Asistencia_a_Clase__c</fullName>
    <label>d. Observaciones Asistencia a Clase</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>