force-app/main/default/objects/Seguimiento_Educativo__c/fields/d_Observaciones_Desarrollo_Personal__c.field-meta.xml
<CustomField>
    <fullName>d_Observaciones_Desarrollo_Personal__c</fullName>
    <label>d. Observaciones Desarrollo Personal</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>