force-app/main/default/objects/Seguimiento_Educativo__c/fields/de_Materias_Desaprobadas__c.field-meta.xml
<CustomField>
    <fullName>de_Materias_Desaprobadas__c</fullName>
    <formula>Cantidad_de_Materias_Desaprobadas__c / Cantidad_de_Materias__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% de Materias Desaprobadas</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>