force-app/main/default/objects/Seguimiento_Educativo__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cursando 5° año</fullName>
            </value>
            <value>
                <fullName>Cursando 6° año</fullName>
            </value>
            <value>
                <fullName>Cursando 7° año</fullName>
            </value>
            <value>
                <fullName>Promueve al próximo año escolar</fullName>
            </value>
            <value>
                <fullName>Recursará el año escolar</fullName>
            </value>
            <value>
                <fullName>Egresado pero adeuda materias</fullName>
            </value>
            <value>
                <fullName>Graduado en cierre del 3° trimestre</fullName>
            </value>
            <value>
                <fullName>Graduado en mesas de Diciembre</fullName>
            </value>
            <value>
                <fullName>Graduado en mesas de Febrero-Marzo</fullName>
            </value>
            <value>
                <fullName>Graduado en instancias posteriores</fullName>
            </value>
            <value>
                <fullName>Terminó de cursar 5° año, pero adeuda materias</fullName>
            </value>
            <value>
                <fullName>Terminó de cursar 6° año, pero adeuda materias</fullName>
            </value>
            <value>
                <fullName>Promueve a 5° año con materias pendientes</fullName>
            </value>
            <value>
                <fullName>Promueve a 6° año con materias pendientes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>