force-app/main/default/objects/Seguimiento_Educativo__c/fields/Fecha_de_Informe__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Informe__c</fullName>
    <label>Fecha de Informe</label>
    <type>Date</type>
</CustomField>