force-app/main/default/objects/Seguimiento_Educativo__c/fields/Info_s_lo_uso_interno__c.field-meta.xml
<CustomField>
    <fullName>Info_s_lo_uso_interno__c</fullName>
    <label>Info sólo uso interno</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>