force-app/main/default/objects/Seguimiento_Educativo__c/fields/Nota_Ingles__c.field-meta.xml
<CustomField>
    <fullName>Nota_Ingles__c</fullName>
    <formula>IF(ISPICKVAL( X1_Materia__c , &quot;Inglés&quot;), X1_Calificaci_n__c , 

IF(ISPICKVAL( X2_Materia__c , &quot;Inglés&quot;), X2_Calificaci_n__c , 

IF(ISPICKVAL( X3_Materia__c , &quot;Inglés&quot;), X3_Calificaci_n__c , 

IF(ISPICKVAL( X4_Materia__c , &quot;Inglés&quot;), X4_Calificaci_n__c , 

IF(ISPICKVAL( X5_Materia__c , &quot;Inglés&quot;), X5_Calificaci_n__c , 

IF(ISPICKVAL( X6_Materia__c , &quot;Inglés&quot;), X6_Calificaci_n__c , 

IF(ISPICKVAL( X7_Materia__c , &quot;Inglés&quot;), X7_Calificaci_n__c , 

IF(ISPICKVAL( X8_Materia__c , &quot;Inglés&quot;), X8_Calificaci_n__c , 

IF(ISPICKVAL( X9_Materia__c , &quot;Inglés&quot;), X9_Calificaci_n__c , 

IF(ISPICKVAL( X10_Materia__c , &quot;Inglés&quot;), X10_Calificaci_n__c , 

IF(ISPICKVAL( X11_Materia__c , &quot;Inglés&quot;), X11_Calificaci_n__c , 

IF(ISPICKVAL( X12_Materia__c , &quot;Inglés&quot;), X12_Calificaci_n__c , 

IF(ISPICKVAL( X13_Materia__c , &quot;Inglés&quot;), X13_Calificaci_n__c , 

IF(ISPICKVAL( X14_Materia__c , &quot;Inglés&quot;), X14_Calificaci_n__c , 

null))))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nota Ingles</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>