force-app/main/default/objects/Seguimiento_Educativo__c/fields/Nro_de_Informe__c.field-meta.xml
<CustomField>
    <fullName>Nro_de_Informe__c</fullName>
    <inlineHelpText>N°0 = Comienzo de año/ N°1 = Julio/ N°2 = Octubre/ N°3 = Diciembre / N°4 = Marzo (con materias adeudadas)</inlineHelpText>
    <label>Nro de Informe</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>