force-app/main/default/objects/Seguimiento_Educativo__c/fields/Pertenencia_a_CFC__c.field-meta.xml
<CustomField>
    <fullName>Pertenencia_a_CFC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pertenencia a Programa Educativo</label>
    <referenceTo>Pertenencia_a_Programas__c</referenceTo>
    <relationshipLabel>Seguimiento Educativo</relationshipLabel>
    <relationshipName>Seguimiento_Educativo</relationshipName>
    <type>Lookup</type>
</CustomField>