force-app/main/default/objects/Seguimiento_Educativo__c/fields/Practica_en_Empresa__c.field-meta.xml
<CustomField>
    <fullName>Practica_en_Empresa__c</fullName>
    <formula>Alumno__r.Practica_en_Empresa__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Practica en Empresa</label>
    <type>Text</type>
</CustomField>