force-app/main/default/objects/Seguimiento_Educativo__c/fields/Programa__c.field-meta.xml
<CustomField>
    <fullName>Programa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Programa</label>
    <referenceTo>Programa__c</referenceTo>
    <relationshipLabel>Seguimiento Educativo</relationshipLabel>
    <relationshipName>Seguimiento_Educativo</relationshipName>
    <type>Lookup</type>
</CustomField>