force-app/main/default/objects/Seguimiento_Educativo__c/fields/Promedio__c.field-meta.xml
<CustomField>
    <fullName>Promedio__c</fullName>
    <formula>(X1_Calificaci_n__c + X2_Calificaci_n__c + X10_Calificaci_n__c + X11_Calificaci_n__c + X12_Calificaci_n__c +  X13_Calificaci_n__c +  X14_Calificaci_n__c  +  X3_Calificaci_n__c +  X4_Calificaci_n__c +  X5_Calificaci_n__c +  X6_Calificaci_n__c +  X7_Calificaci_n__c +  X8_Calificaci_n__c + X9_Calificaci_n__c)/  Cantidad_de_Materias__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promedio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>