force-app/main/default/objects/Seguimiento_Educativo__c/fields/Proyecto_CAS__c.field-meta.xml
<CustomField>
    <fullName>Proyecto_CAS__c</fullName>
    <label>Proyecto CAS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excelente</fullName>
            </value>
            <value>
                <fullName>Muy Bueno</fullName>
            </value>
            <value>
                <fullName>Bueno</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>No alcanza las expectativas</fullName>
            </value>
            <value>
                <fullName>Insuficiente</fullName>
                <isActive>false</isActive>
                <label>Insuficiente</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>