force-app/main/default/objects/Seguimiento_Educativo__c/fields/Se_llev_materias_el_a_o_anterior__c.field-meta.xml
<CustomField>
    <fullName>Se_llev_materias_el_a_o_anterior__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Corresponde al año anterior al ingreso a Reciduca.</inlineHelpText>
    <label>¿Se llevó materias el año anterior?</label>
    <type>Checkbox</type>
</CustomField>