force-app/main/default/objects/Seguimiento_Educativo__c/fields/Tipo_de_Practica__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Practica__c</fullName>
    <label>Tipo de Practica</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Práctica Profesionalizante</fullName>
            </value>
            <value>
                <fullName>Práctica Educativa</fullName>
            </value>
            <value>
                <fullName>Voluntariado</fullName>
            </value>
            <value>
                <fullName>Mentoreo</fullName>
            </value>
            <value>
                <fullName>Curso</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>