force-app/main/default/objects/Seguimiento_Educativo__c/fields/X10_Calificaci_n__c.field-meta.xml
<CustomField>
    <fullName>X10_Calificaci_n__c</fullName>
    <label>10. Calificación</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>