force-app/main/default/objects/Seguimiento_Educativo__c/fields/X10_Materia__c.field-meta.xml
<CustomField>
    <fullName>X10_Materia__c</fullName>
    <label>10. Materia</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Administración</fullName>
            </value>
            <value>
                <fullName>Ambiente y sociedad</fullName>
            </value>
            <value>
                <fullName>Arte</fullName>
            </value>
            <value>
                <fullName>Arte-lenguaje complementario</fullName>
            </value>
            <value>
                <fullName>Arte y ciencia</fullName>
            </value>
            <value>
                <fullName>Biología</fullName>
            </value>
            <value>
                <fullName>Catequesis</fullName>
            </value>
            <value>
                <fullName>Centrales Eléctricas</fullName>
            </value>
            <value>
                <fullName>Ciencia y Tecnología</fullName>
            </value>
            <value>
                <fullName>Computación aplicada</fullName>
            </value>
            <value>
                <fullName>Comunicación</fullName>
            </value>
            <value>
                <fullName>Comunicación, cultura y sociedad</fullName>
            </value>
            <value>
                <fullName>Costo y Comercio</fullName>
            </value>
            <value>
                <fullName>Derecho</fullName>
            </value>
            <value>
                <fullName>Derecho del Trabajo</fullName>
            </value>
            <value>
                <fullName>Diseño Robótico</fullName>
            </value>
            <value>
                <fullName>Diseño y Procesamientos Mecánicos</fullName>
            </value>
            <value>
                <fullName>Economía política</fullName>
            </value>
            <value>
                <fullName>Economía y administración</fullName>
            </value>
            <value>
                <fullName>EDI- Espacios de definición institucional</fullName>
            </value>
            <value>
                <fullName>Educación física</fullName>
            </value>
            <value>
                <fullName>Electromecánica</fullName>
            </value>
            <value>
                <fullName>Electrónica Aplicada</fullName>
            </value>
            <value>
                <fullName>Electrónica Industrial</fullName>
            </value>
            <value>
                <fullName>Electrotecnia II</fullName>
            </value>
            <value>
                <fullName>Emprendimientos y Desarrollo Local</fullName>
            </value>
            <value>
                <fullName>Energías Alternativas</fullName>
            </value>
            <value>
                <fullName>Filosofía</fullName>
            </value>
            <value>
                <fullName>Finanzas</fullName>
            </value>
            <value>
                <fullName>Física</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>